Fixed '[top navigation] Successes, Insights, and About Us are still not aligned. These are one pixel too high.'

--- a/css/altres.css
+++ b/css/altres.css
@@ -214,7 +214,7 @@ h4 {
 
 #secondary-links {
 	position: absolute;
-	bottom: 12.60px;
+	bottom: 12px;
 	right: 115px;
 	text-align: right;
 	font-size: 15px;
